<resources>
    <string name="app_name">Two Activities Challenge</string>
    <string name="judul">Free Story</string>
    <string name="subheading">Behind That Locked Door : Beatles Rarities</string>
    <string name="subheading1">Mermaid Of The Carribean Kingdom</string>
    <string name="subheading2">The Cat and The Mouse</string>
    <string name="article">In a vault deep inside Abbey Road Studios in London - protected by an unmarked, triple-locked, police-alarmed door- are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the Let It Be album. The best of the best were released by Apple Records in the form of the 3 volume Anthology series. For more information, see the Beatles Time Capsule at www.rockument.com \n \nThis volume starts with the first new Beatle song, "Free as a Bird" (based on a John Lennon demo, found only on The Lost Lennon Tapes Vol 28, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions\n\n <b>Highlights include:</b>\n\n <i><b>Cry for a Shadow</b></i>  - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally tited Bestle Bop" and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band) "Cry for a Shadow" is an Instrumental written by Lennon and Harrison, which makes it unique to this day.\n\n<b><i>Leave My Kitten Alone </i></b> - One of the lost Beatle songs recorded during the "Beatles For Sale" sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 RnB hit for Little Willie John and covered by Johhny Preston before tried it and shelved it.
    </string>

    <string name="article1">One day while walking along the sea shore, Suzy discovered a mermaid washed up on the shore. She was surprised and went forward to take a look at the mermaid. The Mermaid was injured and she laid on the sea shore unconscious.\n \n

Suzy had never seen a mermaid before. She had heard stories of mermaids from books. The mermaid looks like a human with two hands but her lower body is that of a fish. She looked beautiful. One of the mermaid’s fins was injured, she must have gotten injured from abrasion with sharp edges.\n \n

Suzy decided to bring the mermaid home to tend to her injuries. She brought the mermaid home and put her into the bath tub. As mermaid may not be accustom to the environment since it was a sea creature, Suzy quickly turns on the water to fill up the bath tub with water to place her inside.\n \n

Since the mermaid is from the sea, her food source should be from the sea as well, Suzy thought. She quickly prepared some sea weed and place them beside the tub, so that the mermaid can eat them when she awakens. Suzy went back to do her own housework. \n \n

When the mermaid gained consciousness, she was surprised and confused. She did not know where she was and looked around to make sense of her surroundings. When she saw that there were fishes and sea weeds, she quickly helped herself as she was hungry. \n \n

Suzy heard noises from the bath room and knew that the mermaid has awakened. She slowly sneaks a peek through the key hole so that she does not startle the mermaid with her sudden appearance.</string>

    <string name="article2">The Cat and the Mouse often played together when they were young. They will often play catch, look for bugs together or simply basking under the sun. For a long time, they were each other’s best friends and companions. As time passed by, both of them grew. The Cat became a big cat, while the Mouse remains smaller. \n\n

One day, while they were crossing a large forest, the Cat suddenly felt hungry as usual. His stomach was rumbling loudly, and he told Mouse, “My friend, I am too hungry. Can you get me something to eat?” Mouse replied playfully, “You are getting fatter to be eating so often. Come on, let’s continue our exploration first!”\n\n

The Cat was unhappy but did as he was told. However, his stomach was growling louder with every step he took. He decided to ask again, “Mouse, I am famished. I need to eat. Can you get me something to eat?” Again, Mouse responded, “No way, I am a little sleepy. I want to take a nap now.\n\n
        This made Cat very upset. In a fit of anger, he said: “You mouse! Now go find me something to eat, or I will eat you.” As Cat said this, he can feel his natural hunting instinct grew. Almost like a voice whispering in his ears to urge him to eat his friend. He started to drool a little.\n\n

This startled the Mouse. He quickly replied, “I know that there are baby chicks nearby. We will catch one.” The thought of eating baby chicks shifted Cat’s growing craving for Mouse. He thought this was a good idea, and they went to the chicken’s coop together.\n\n

The Mouse hurriedly sneaked in and distracted the mother hen. Meanwhile, Cat took the chance to steal a baby chick. He devoured the chick as soon as he caught it. Feeling ravenous, the Cat wanted more. Without thinking, he sneaked in to steal another chick by himself. However, the Cat was clumsy and was spotted by Mother Hen, and she screamed for help.\n\n

A nearby farmer heard the scream and saw the Cat running out from the coop. He began chasing after the Cat and hitting it with his wooden stick. The Cat was hurt. He ran to the Mouse and reprimanded him, “You fooled me! I wanted another chick, and the farmer suddenly attacked me. I was nearly caught!”

The Mouse shuddered and replied, “Why are you so gluttonous?” The Cat was annoyed by what happened, but the incident made him tired. Hence, they decided to rest for the day.”</string>
</resources>