<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#547EE6"
        android:lineSpacingExtra="8sp"
        android:padding="10sp"
        android:text="@string/judul"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="20sp"
                android:text="@string/subheading"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#737272"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:autoLink="web"
                android:lineSpacingExtra="3sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/article"
                android:textAlignment="viewStart"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="#547EE6"
                android:onClick="returnBack"
                android:text="BACK"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>